# SOVEREIGN_SHADOW_3

./: --LadderEngine--< 2  .claude-code.yaml  .devcontainer.json  .dockerignore  .env.example  .env.template  .gitignore  .mcp.json  .overnight.pid  .replit  .replit-setup.sh  .zshrc_sovereign  AAVE_PROTECTION_SUITE_COMPLETE.md  ABACUS_AI_CONNECTION.js  ABACUS_AI_INTEGRATION_ROADMAP.md  ABACUS_HANDOFF_OCTOBER_2025_CRISIS_AAVE.md  AI_ALIGNMENT_PROMPT.md  AI_COLLABORATION.md  API_INTEGRATION_STATUS.md  API_INTEGRATION_TRACKER.md  API_KEY_SETUP_GUIDE.md  App.tsx  BATTLE_PLAN.md  BRAIN.json  BRAIN_JOT.json  BUILDERS_GUIDE.md  BUILD_STATUS.json  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_SETUP_COMPLETE.md  CLEAN_START.sh  COMPREHENSIVE_SYSTEM_ANALYTICS_2025-11-20.md  CONSOLIDATION_REPORT.md  CONTEXT_EMERGENCY_SUMMARY.md  CONTEXT_REAL.md  CRASH_RECOVERY_GUIDE.md  DAILY_OPERATOR_CHECKLIST.md  DAILY_STATUS_SYSTEM.py  DEDUPLICATION_REPORT_2025-11-05.md  DEEPAGENT_HANDOFF_PACKAGE.md  (+142 more)
.claude/: project.json  settings.json  settings.local.json
.devcontainer/: ARCHITECTURE.md  Dockerfile  QUICK_START.md  devcontainer-with-mcp.json  devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
.obsidian/: appearance.json  workspace.json
AAVE_system/: tiered_ladder_system.py  unified_portfolio_tracker.py  unified_profit_tracker.py
Crypto Tax/: 2025_Q1_Q3_full_analysis.csv
MASTER_FIX/: COMPLETE_NETWORK_FIX.sh  unified_mcp_server.py
Master_Integration_Script_Creation/: DELIVERY_PACKAGE.md  DOCUMENTATION_INDEX.txt  RESEARCH_COMPLETE_SUMMARY.md  (+2 more)
SS_III/: README.md
(+2041 files in other folders)
