[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-shadow"
version = "3.0.0"
description = "Sovereign Shadow III - AI-Powered Trading System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
packages = ["core", "doe_engine", "ds_star"]

[tool.setuptools.package-dir]
"" = "."
